[package]
name = "peach-monitor"
version = "0.1.1"
authors = ["mycognosist <gnomad@cryptolab.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.1.6"
nest = "1.0.0"
probes = "0.3"
serde_json = "1.0.57"
structopt = "0.3"
xdg = "2.2.0"
