[package]
name = "peach-oled"
version = "0.1.3"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "Write and draw to OLED display using JSON-RPC over HTTP."
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-oled"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-oled allows writing and drawing to a 128x64 pixel OLED display \
with SDD1306 driver (I2C) using JSON-RPC over HTTP."""
maintainer-scripts="debian"
systemd-units = { unit-name = "peach-oled" }
assets = [
    ["target/release/peach-oled", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/peach-oled/README", "644"],
]

[badges]
travis-ci = { repository = "peachcloud/peach-oled", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
jsonrpc-core = "11.0.0"
jsonrpc-http-server = "11.0.0"
jsonrpc-test = "11.0.0"
linux-embedded-hal = "0.2.2"
embedded-graphics = "0.4.7"
tinybmp = "0.1.0"
ssd1306 = "0.2.6"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.39"
log = "0.4.0"
env_logger = "0.6.1"
snafu = "0.4.1"
nix="0.11"
