[package]
name = "peach-probe"
version = "0.1.2"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "Diagnostic tool for probing PeachCloud microservices to evaluate their state and ensure correct API responses"
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-probe"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-probe is a diagnostic tool for probing PeachCloud microservices to evaluate their state" \
and ensure correct API responses" \
"""
assets = [
    ["target/release/peach-probe", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/peach-probe/README", "644"],
]

[dependencies]
structopt = "0.3.13"
env_logger = "0.6.1"
log = "0.4.0"
jsonrpc-core = "14.2"
jsonrpc-client-http = "0.5"
jsonrpc-client-core = "0.5"
jsonrpc-test = "14.2"
snafu = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
peach-lib = { git = "https://github.com/peachcloud/peach-lib", branch = "main" }
clap = "2.33.3"
const_format = "0.2.10"
regex = "1"



