[package]
name = "peach-stats"
version = "0.1.3"
authors = ["Andrew Reid <gnomad@cryptolab.net>"]
edition = "2018"
description = "Query system statistics using JSON-RPC over HTTP. Provides a JSON-RPC wrapper around the probes and systemstat crates."
homepage = "https://opencollective.com/peachcloud"
repository = "https://github.com/peachcloud/peach-stats"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false

[package.metadata.deb]
depends = "$auto"
extended-description = """\
peach-stats is a system statistics microservice module for PeachCloud. \
Query system statistics using JSON-RPC over HTTP. Provides a JSON-RPC \
wrapper around the probes and systemstat crates."""
maintainer-scripts="debian"
systemd-units = { unit-name = "peach-stats" }
assets = [
    ["target/release/peach-stats", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/peach-stats/README", "644"],
]

[badges]
travis-ci = { repository = "peachcloud/peach-stats", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
env_logger = "0.6"
jsonrpc-core = "11"
jsonrpc-http-server = "11"
jsonrpc-test = "11"
log = "0.4"
probes = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.4"
systemstat = "0.1"
